# TheaBridge

./: .gitignore  Cargo.toml  thea.abi  thea_abi.json
db/: db  snap.000000000000041D
src/: builder.rs  cli.rs  error.rs  evmclient.rs  main.rs  metadata.scale  relayer.rs  substrateclient.rs  test.rs  traits.rs
