[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws"] }
subxt = {git = "https://github.com/paritytech/subxt"}
tokio = { version = "1.27", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = { version = "0.1.12", features = ["time"] }
futures = "0.3.13"
thea-primitives = { path = "../Polkadex/primitives/thea"}
parity-scale-codec = "3.4.0"
k256 = "0.13.2"
subxt-signer = "0.32.1"
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
log = "0.4.14"
structopt = { version = "0.3" }
env_logger = "0.8.3"