[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws"] }
subxt = {git = "https://github.com/paritytech/subxt"}
tokio = { version = "1.27", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = { version = "0.1.12", features = ["time"] }
futures = "0.3.13"
thea-primitives = { path = "../Polkadex/primitives/thea"}
thea = { path = "../Polkadex/pallets/thea"}
parity-scale-codec = "3.4.0"
k256 = "0.13.2"
subxt-signer = {git = "https://github.com/paritytech/subxt"}
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
log = "0.4.14"
structopt = { version = "0.3" }
env_logger = "0.8.3"
vrf = "0.2.4"
hex = "0.4.3"
actix-web = "4.3.1"
sled = "0.34.7"
anyhow = "1.0.71"
serde = "1.0.171"
serde_json = "1.0.102"
ecdsa = "0.15.0"
scale-info = { version = "2.1.2" }